--- a/_output.yml
+++ b/_output.yml
@@ -1,7 +1,10 @@
 bookdown::bs4_book:
   css: style.css
   theme:
-    primary: "#583E75"
+    primary: "#333963"
+    secondary : "#48DAC6"
+    bg : "#EDEDED" 
+    fg : "#464646"
   repo: https://github.com/rstudio/bookdown-demo
 bookdown::pdf_book:
   includes:
